--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,20 +9,24 @@
 
 .dark{
   --color-bg-primary: #232325;
+  --color-bg-primary-opacity: #23232584;
   --color-text-primary: #F2F2F2;
   --color-text-secondary: #C4A567;
   --color-text-hover: #C4A567;
   --color-bg-secondary: #323232;
   --box-shadow-primary: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  --box-shadow-secondary: rgba(149, 157, 165, 0.2) 0px 8px 24px;;
 }
 
 .light{
   --color-bg-primary: #F2F2F2;
+  --color-bg-primary-opacity: #F2F2F284;
   --color-text-primary: #232325;
   --color-text-secondary: #323232;
   --color-text-hover: #C4A567;
   --color-bg-secondary: #E9E9E9;
   --box-shadow-primary: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  --box-shadow-secondary: rgba(149, 157, 165, 0.2) 0px 8px 24px;;
 }
 
 :root {
