--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,8 @@
   --box-shadow-primary: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
   --box-shadow-secondary: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   --box-shadow-card: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  --primary: #232325;
+  --secondary: #C4A567;
 }
 
 .light{
@@ -29,12 +31,20 @@
   --box-shadow-primary: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   --box-shadow-secondary: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   --box-shadow-card: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  --primary: #F2F2F2;
+  --secondary: #323232;
 }
 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --black: #232325;
+  --back-2: #323232;
+  --gold: #C4A567;
+  --white: #F2F2F2;
+  --white-2: #E9E9E9;
+  --box-shadow-software: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 @media (prefers-color-scheme: light) {
