feat: adjusting editor

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,3 +58,12 @@ html, body {
 .ui.input{
   width: 100% !important;
 }
+
+@layer base {
+  input[type='number']::-webkit-outer-spin-button,
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number'] {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+}
